force-app/main/default/objects/UPP_Document__c/UPP_Document__c.object-meta.xml
<CustomObject>
    <label>UPP Document</label>
    <nameField>
        <displayFormat>UPPS-{00000}</displayFormat>
        <label>UPP Document</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>UPP Documents</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>