force-app/main/default/objects/UPP_Document__c/fields/Amount_Due__c.field-meta.xml
<CustomField>
    <fullName>Amount_Due__c</fullName>
    <label>Amount Due</label>
    <length>255</length>
    <type>Text</type>
</CustomField>