force-app/main/default/objects/UPP_Document__c/fields/Deduction__c.field-meta.xml
<CustomField>
    <fullName>Deduction__c</fullName>
    <label>Deduction</label>
    <length>255</length>
    <type>Text</type>
</CustomField>