force-app/main/default/objects/UPP_Document__c/fields/Entry_Type__c.field-meta.xml
<CustomField>
    <fullName>Entry_Type__c</fullName>
    <label>Entry Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>