force-app/main/default/objects/UPP_Document__c/fields/Payment_Status__c.field-meta.xml
<CustomField>
    <fullName>Payment_Status__c</fullName>
    <label>Payment Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>