force-app/main/default/objects/UPP_Document__c/fields/PO__c.field-meta.xml
<CustomField>
    <fullName>PO__c</fullName>
    <label>PO</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>