force-app/main/default/objects/UPP_Document__c/fields/Product2__c.field-meta.xml
<CustomField>
    <fullName>Product2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Item Id</label>
    <referenceTo>Product2</referenceTo>
    <relationshipName>Items</relationshipName>
    <type>Lookup</type>
</CustomField>