force-app/main/default/objects/UPP_Document__c/fields/Ship_to_State__c.field-meta.xml
<CustomField>
    <fullName>Ship_to_State__c</fullName>
    <label>Ship to State</label>
    <length>255</length>
    <type>Text</type>
</CustomField>