force-app/main/default/objects/UPP_Document__c/fields/Sold_to_City__c.field-meta.xml
<CustomField>
    <fullName>Sold_to_City__c</fullName>
    <label>Sold to City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>