force-app/main/default/objects/UPP_Document__c/fields/Sold_to_State__c.field-meta.xml
<CustomField>
    <fullName>Sold_to_State__c</fullName>
    <label>Sold to State</label>
    <length>255</length>
    <type>Text</type>
</CustomField>