force-app/main/default/objects/UPP_Document__c/fields/UPP_Statement__c.field-meta.xml
<CustomField>
    <fullName>UPP_Statement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>UPP Statement</label>
    <referenceTo>UPP_Statement__c</referenceTo>
    <relationshipLabel>UPP Documents</relationshipLabel>
    <relationshipName>UPP_Documents</relationshipName>
    <type>Lookup</type>
</CustomField>